--- a/package.json
+++ b/package.json
@@ -43,10 +43,12 @@
     "embla-carousel-react": "^8.0.0",
     "firebase": "^12.3.0",
     "firebase-tools": "^15.2.1",
+    "katex": "^0.16.27",
     "lucide-react": "^0.344.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
+    "react-katex": "^3.1.0",
     "react-router-dom": "^6.30.1",
     "recharts": "^2.10.4",
     "sonner": "^1.4.0",
