--- a/package.json
+++ b/package.json
@@ -49,8 +49,11 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
     "react-katex": "^3.1.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^6.30.1",
     "recharts": "^2.10.4",
+    "rehype-katex": "^7.0.1",
+    "remark-math": "^6.0.0",
     "sonner": "^1.4.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
